edited pointer events of cropper container in order to prevent covering the image upload buttons

--- a/main/static/css/onboarding.css
+++ b/main/static/css/onboarding.css
@@ -19,6 +19,7 @@ body {
 
 .profile-image-cropper-container {
     position: fixed;
+    pointer-events: none;
     width: 98%;
     height: 70%;
     top: 50%;
